--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         <a href="https://www.instagram.com/anandaaditya498" class="link-button"><i class="fab fa-instagram"></i> Instagram</a>
         <a href="https://tiktok.com/@aditya.ananda45" class="link-button"><i class="fab fa-tiktok"></i> TikTok</a>
         <a href="https://t.me/vinzxxc" class="link-button"><i class="fab fa-telegram"></i> Telegram</a>
-        <a href="https://threads.net/@" class="link-button" data-note="soon"><i class="fab fa-threads"></i> Threads</a>
+        <a href="https://vinzzycingterr.sexast.biz.id" class="link-button"><i class="fas fa-shopping-bag"></i> Shop</a>
         <a href="https://linkedin.com/in/" class="link-button" data-note="soon"><i class="fab fa-linkedin"></i> LinkedIn</a>
       </div>
     </div>
