--- a/index.html
+++ b/index.html
@@ -306,10 +306,30 @@
     const musicToggle = document.getElementById('musicToggle');
 
     const playlist = [
-      { title: 'The Cut Always Bleeds WILDFLOWER', src: 'https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3' },
-      { title: 'Track 2', src: 'https://www.soundhelix.com/examples/mp3/SoundHelix-Song-2.mp3' },
-      { title: 'Track 3', src: 'https://www.soundhelix.com/examples/mp3/SoundHelix-Song-3.mp3' }
-    ];
+  // Viral / trending
+  { title: 'The Fate of Ophelia', src: 'https://open.spotify.com/track/1' },
+  { title: 'back to friends', src: 'https://open.spotify.com/track/2' },
+  { title: 'La Plena (W Sound 05)', src: 'https://open.spotify.com/track/3' },
+  { title: 'Apt.', src: 'https://open.spotify.com/track/4' },
+  { title: 'Party 4 U', src: 'https://open.spotify.com/track/5' },
+  { title: 'Tears', src: 'https://open.spotify.com/track/6' },
+  { title: 'Anxiety', src: 'https://open.spotify.com/track/7' },
+  { title: 'Ordinary', src: 'https://open.spotify.com/track/8' },
+  { title: 'I Barely Know Her', src: 'https://open.spotify.com/track/9' },
+  { title: 'So Easy (To Fall In Love)', src: 'https://open.spotify.com/track/10' },
+
+  // Sad / Bucin / Night Vibes
+  { title: 'Lose You To Love Me', src: 'https://open.spotify.com/track/11' }, // Selena Gomez
+  { title: 'Before You Go', src: 'https://open.spotify.com/track/12' }, // Lewis Capaldi
+  { title: 'Falling', src: 'https://open.spotify.com/track/13' }, // Harry Styles
+  { title: 'Love Someone', src: 'https://open.spotify.com/track/14' }, // Lukas Graham
+  { title: 'drivers license', src: 'https://open.spotify.com/track/15' }, // Olivia Rodrigo
+  { title: 'Bucin', src: 'https://open.spotify.com/track/16' }, // Indonesia vibes
+  { title: 'Cinta Luar Biasa', src: 'https://open.spotify.com/track/17' }, // Andmesh
+  { title: 'Night Changes', src: 'https://open.spotify.com/track/18' }, // One Direction
+  { title: 'Someone You Loved', src: 'https://open.spotify.com/track/19' }, // Lewis Capaldi
+  { title: 'Vibes Malam', src: 'https://open.spotify.com/track/20' } // chill night vibes
+];
     let currentTrack = 0;
     let isPlaying = false;
     let isLoaded = false; // Track if first load has happened
