--- a/index.html
+++ b/index.html
@@ -307,10 +307,10 @@
 
     const playlist = [
   // Viral / trending
-  { title: 'The Fate of Ophelia', src: 'https://open.spotify.com/track/1' },
-  { title: 'back to friends', src: 'https://open.spotify.com/track/2' },
-  { title: 'La Plena (W Sound 05)', src: 'https://open.spotify.com/track/3' },
-  { title: 'Apt.', src: 'https://open.spotify.com/track/4' },
+  { title: 'La La Lost you', src: 'https://files.catbox.moe/62rwtv.mp3' },
+  { title: 'Terbelenggu', src: 'https://files.catbox.moe/pd7dc9.mp3' },
+  { title: 'Bergema sampai selamanya', src: 'https://files.catbox.moe/6l8rze.mp3' },
+  { title: 'Pouple', src: 'https://open.spotify.com/track/4' },
   { title: 'Party 4 U', src: 'https://open.spotify.com/track/5' },
   { title: 'Tears', src: 'https://open.spotify.com/track/6' },
   { title: 'Anxiety', src: 'https://open.spotify.com/track/7' },
