--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Dityya | VarShade</title>
+  <title>Dityya | Info</title>
   <!-- OG tags for link preview -->
   <meta property="og:title" content="Dityya | VarShade" />
   <meta property="og:description" content="Hi, I'm Dityya. Check out my social links, tools, and WhatsApp connections." />
@@ -310,9 +310,9 @@
   { title: 'La La Lost you', src: 'https://files.catbox.moe/62rwtv.mp3' },
   { title: 'Terbelenggu', src: 'https://files.catbox.moe/pd7dc9.mp3' },
   { title: 'Bergema sampai selamanya', src: 'https://files.catbox.moe/6l8rze.mp3' },
-  { title: 'Pouple', src: 'https://open.spotify.com/track/4' },
-  { title: 'Party 4 U', src: 'https://open.spotify.com/track/5' },
-  { title: 'Tears', src: 'https://open.spotify.com/track/6' },
+  { title: 'Pouple', src: 'https://files.catbox.moe/t5brdk.mp3' },
+  { title: 'Show Me Love', src: 'https://files.catbox.moe/nlja0w.mp3' },
+  { title: 'Pamungkas Monolog', src: 'https://files.catbox.moe/nm1td2.mp3' },
   { title: 'Anxiety', src: 'https://open.spotify.com/track/7' },
   { title: 'Ordinary', src: 'https://open.spotify.com/track/8' },
   { title: 'I Barely Know Her', src: 'https://open.spotify.com/track/9' },
