--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
       <a href="https://www.instagram.com/anandaaditya498" target="_blank"><i class="fab fa-instagram"></i></a>
       <a href="https://t.me/vinzxxc" target="_blank"><i class="fab fa-telegram"></i></a>
     </div>
-    <p>&copy; 2025 VarShade. All rights reserved.</p>
+    <p>&copy; 2025 Dityya. All rights reserved.</p>
   </footer>
 
   <audio id="audio" preload="auto"></audio>
