--- a/index.html
+++ b/index.html
@@ -313,22 +313,8 @@
   { title: 'Pouple', src: 'https://files.catbox.moe/t5brdk.mp3' },
   { title: 'Show Me Love', src: 'https://files.catbox.moe/nlja0w.mp3' },
   { title: 'Pamungkas Monolog', src: 'https://files.catbox.moe/nm1td2.mp3' },
-  { title: 'Anxiety', src: 'https://open.spotify.com/track/7' },
-  { title: 'Ordinary', src: 'https://open.spotify.com/track/8' },
-  { title: 'I Barely Know Her', src: 'https://open.spotify.com/track/9' },
-  { title: 'So Easy (To Fall In Love)', src: 'https://open.spotify.com/track/10' },
-
-  // Sad / Bucin / Night Vibes
-  { title: 'Lose You To Love Me', src: 'https://open.spotify.com/track/11' }, // Selena Gomez
-  { title: 'Before You Go', src: 'https://open.spotify.com/track/12' }, // Lewis Capaldi
-  { title: 'Falling', src: 'https://open.spotify.com/track/13' }, // Harry Styles
-  { title: 'Love Someone', src: 'https://open.spotify.com/track/14' }, // Lukas Graham
-  { title: 'drivers license', src: 'https://open.spotify.com/track/15' }, // Olivia Rodrigo
-  { title: 'Bucin', src: 'https://open.spotify.com/track/16' }, // Indonesia vibes
-  { title: 'Cinta Luar Biasa', src: 'https://open.spotify.com/track/17' }, // Andmesh
-  { title: 'Night Changes', src: 'https://open.spotify.com/track/18' }, // One Direction
-  { title: 'Someone You Loved', src: 'https://open.spotify.com/track/19' }, // Lewis Capaldi
-  { title: 'Vibes Malam', src: 'https://open.spotify.com/track/20' } // chill night vibes
+  { title: 'Aku Kamu Dan Samudra', src: 'https://files.catbox.moe/61pxj2.mp3' }
+]; // chill night vibes
 ];
     let currentTrack = 0;
     let isPlaying = false;
