--- a/index.html
+++ b/index.html
@@ -313,8 +313,7 @@
   { title: 'Pouple', src: 'https://files.catbox.moe/t5brdk.mp3' },
   { title: 'Show Me Love', src: 'https://files.catbox.moe/nlja0w.mp3' },
   { title: 'Pamungkas Monolog', src: 'https://files.catbox.moe/nm1td2.mp3' },
-  { title: 'Aku Kamu Dan Samudra', src: 'https://files.catbox.moe/61pxj2.mp3' }
-]; // chill night vibes
+  { title: 'Aku Kamu Dan Samudra', src: 'https://files.catbox.moe/61pxj2.mp3' }// chill night vibes
 ];
     let currentTrack = 0;
     let isPlaying = false;
