--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Dityya | Info</title>
   <!-- OG tags for link preview -->
-  <meta property="og:title" content="Dityya | VarShade" />
+  <meta property="og:title" content="Dityya | Info" />
   <meta property="og:description" content="Hi, I'm Dityya. Check out my social links, tools, and WhatsApp connections." />
   <meta property="og:image" content="https://via.placeholder.com/1200x630/000a1a/00D4AA?text=VarShade" /> <!-- Updated placeholder for navy bg -->
   <meta property="og:url" content="https://varshade.netlify.app" />
