--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- OG tags for link preview -->
   <meta property="og:title" content="Dityya | Info" />
   <meta property="og:description" content="Hi, I'm Dityya. Check out my social links, tools, and WhatsApp connections." />
-  <meta property="og:image" content="https://via.placeholder.com/1200x630/000a1a/00D4AA?text=VarShade" /> <!-- Updated placeholder for navy bg -->
+  <meta property="og:image" content="https://via.placeholder.com/1200x630/000a1a/00D4AA?text=dityya ganteng😏🤭" /> <!-- Updated placeholder for navy bg -->
   <meta property="og:url" content="https://varshade.netlify.app" />
   <meta property="og:type" content="website" />
   <!-- Twitter card -->
