--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Dityya | VarShade" />
   <meta name="twitter:description" content="Hi, I'm Dityya. Check out my social links, tools, and WhatsApp connections." />
-  <meta name="twitter:image" content="https://via.placeholder.com/1200x630/000a1a/00D4AA?text=VarShade" />
+  <meta name="twitter:image" content="https://via.placeholder.com/1200x630/000a1a/00D4AA?text=dityya ganteng😏🤭" />
   <!-- Font & Icon -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -171,7 +171,7 @@
   <!-- Navbar -->
   <nav class="navbar">
     <div class="navbar-container">
-      <a href="index.html" class="navbar-logo">VarShade</a>
+      <a href="index.html" class="navbar-logo">dityya ganteng😏🤭</a>
       <div class="navbar-menu" id="navbarMenu">
         <a href="index.html" class="navbar-link"><i class="fas fa-home"></i> Home</a>
         <a href="projects.html" class="navbar-link"><i class="fas fa-project-diagram"></i> Projects</a>
