Update WhatsApp links in index.html

--- a/index.html
+++ b/index.html
@@ -217,19 +217,20 @@
     </div>
     
     <!-- WhatsApp Section -->
+    <!-- WhatsApp Section -->
     <div class="category">
       <h2><i class="fab fa-whatsapp"></i> WhatsApp</h2>
       <div class="link-list">
-        <a href="https://wa.me/6283891813151?text=halo" target="_blank" class="link-button">
+        <a href="https://wa.me/6287885727400?text=halo" target="_blank" class="link-button">
           <i class="fab fa-whatsapp"></i> Contact WhatsApp
         </a>
-        <a href="https://wa.me/6282120627665?text=.menu" target="_blank" class="link-button">
-          <i class="fab fa-whatsapp"></i> Bot WhatsApp
+        <a href="https://wa.me/628xxx?text=.menu" target="_blank" class="link-button">
+          <i class="fab fa-whatsapp"></i> Bot WhatsApp JOin Gb
         </a>
-        <a href="https://chat.whatsapp.com/KEcrlL57xjrGGRs8ii01zd" target="_blank" class="link-button">
+        <a href="https://chat.whatsapp.com/GHZiBQ1hJXm7rUQv3Qoe7b" target="_blank" class="link-button">
           <i class="fab fa-whatsapp"></i> Group WhatsApp
         </a>
-        <a href="https://whatsapp.com/channel/0029Vb2NYCr1CYoMnGK0nu12" target="_blank" class="link-button">
+        <a href="https://whatsapp.com/channel/0029Vb81FVm05MUYq3yDKQ2Y" target="_blank" class="link-button">
           <i class="fab fa-whatsapp"></i> Channel WhatsApp
         </a>
       </div>
@@ -266,7 +267,7 @@
   
   <footer>
     <div class="footer-links">
-      <a href="https://wa.me/6283891813151" target="_blank"><i class="fab fa-whatsapp"></i></a>
+      <a href="https://wa.me/66287885727400" target="_blank"><i class="fab fa-whatsapp"></i></a>
       <a href="https://www.instagram.com/anandaaditya498" target="_blank"><i class="fab fa-instagram"></i></a>
       <a href="https://t.me/vinzxxc" target="_blank"><i class="fab fa-telegram"></i></a>
     </div>
