Add like section styles to index.html

--- a/index.html
+++ b/index.html
@@ -82,8 +82,24 @@
     }
     h1 { font-size: 1.8rem; margin-bottom: 0.5rem; color: var(--accent-color); }
     .bio { font-size: 1rem; margin-bottom: 2rem; opacity: 0.9; }
-    
-    /* Categories - Cyan outlines and roundness like photos */
+    /* Like Section */
+    #like-section {
+      margin-bottom: 2rem;
+      text-align: center;
+    }
+    #likeButton {
+      padding: 0.5rem 1rem;
+      background: var(--accent-color);
+      color: var(--bg-color);
+      border: none;
+      border-radius: var(--border-radius);
+      cursor: pointer;
+      transition: all 0.3s;
+    }
+    #likeButton:hover {
+      background: #00a67a;
+
+   /* Categories - Cyan outlines and roundness like photos */
     .category { margin-bottom: 2rem; text-align: left; }
     .category h2 {   
       display: flex; align-items: center; gap: 0.5rem;   
