Add like button and like count section

--- a/index.html
+++ b/index.html
@@ -215,6 +215,11 @@
     <img src="https://img1.pixhost.to/images/7013/619072900_file.jpg" alt="Profile picture of Dityya" class="avatar" />
     <h1>Dityya</h1>
     <p class="bio">Hi, I'm Dityya. Check out my social links, tools, and WhatsApp connections.</p>
+
+    <div id="like-section">
+  <button id="likeButton">Like</button>
+  <span id="likeCount">0</span> likes
+    </div>
     
     <!-- Social Media Section -->
     <div class="category">
