--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
     <p class="bio">Hi, I'm Dityya. Check out my social links, tools, and WhatsApp connections.</p>
 
     <div id="like-section">
-      <button id="likeButton">Like Website</button>
-      <span id="likeCount">50</span> likes
+      <button id="likeButton">Like</button>
+      <span id="likeCount">50</span> Menyukai 
     </div>
     
     <!-- Social Media Section -->
