Update WhatsApp link and set isPlaying to true

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
   
   <footer>
     <div class="footer-links">
-      <a href="https://wa.me/66287885727400" target="_blank"><i class="fab fa-whatsapp"></i></a>
+      <a href="https://wa.me/6287885727400" target="_blank"><i class="fab fa-whatsapp"></i></a>
       <a href="https://www.instagram.com/anandaaditya498" target="_blank"><i class="fab fa-instagram"></i></a>
       <a href="https://t.me/vinzxxc" target="_blank"><i class="fab fa-telegram"></i></a>
     </div>
@@ -336,7 +336,7 @@
   { title: 'Aku Kamu Dan Samudra', src: 'https://files.catbox.moe/61pxj2.mp3' }// chill night vibes
 ];
     let currentTrack = 0;
-    let isPlaying = false;
+    let isPlaying = true;
     let isLoaded = false; // Track if first load has happened
 
     // Initial state: No music
