Remove like section and update music play state

--- a/index.html
+++ b/index.html
@@ -214,11 +214,6 @@
     <img src="https://img1.pixhost.to/images/7013/619072900_file.jpg" alt="Profile picture of Dityya" class="avatar" />
     <h1>Dityya</h1>
     <p class="bio">Hi, I'm Dityya. Check out my social links, tools, and WhatsApp connections.</p>
-
-    <div id="like-section">
-      <button id="likeButton">Like</button>
-      <span id="likeCount">50</span> Menyukai 
-    </div>
     
     <!-- Social Media Section -->
     <div class="category">
@@ -336,7 +331,7 @@
   { title: 'Aku Kamu Dan Samudra', src: 'https://files.catbox.moe/61pxj2.mp3' }// chill night vibes
 ];
     let currentTrack = 0;
-    let isPlaying = true;
+    let isPlaying = false;
     let isLoaded = false; // Track if first load has happened
 
     // Initial state: No music
