--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       <a href="index.html" class="navbar-logo">dityya ganteng😏🤭</a>
       <div class="navbar-menu" id="navbarMenu">
         <a href="index.html" class="navbar-link"><i class="fas fa-home"></i> Home</a>
-        <a href="projects.html" class="navbar-link"><i class="fas fa-project-diagram"></i> Projects</a>
+        <a href="https://vinzzycingterr.sexast.biz.id" class="navbar-link"><i class="fas fa-shopping-bag"></i> Shop</a>
         <a href="share-code.html" class="navbar-link"><i class="fas fa-code"></i> Share Code</a>
       </div>
       <div class="navbar-controls">
@@ -228,7 +228,7 @@
     </div>
 
     <div class="category">
-      <h2><i class="fas fa-qrcode"></i> VarShade QR Generator</h2>
+      <h2><i class="fas fa-qrcode"></i> QR Generator</h2>
       <div class="link-list">
         <a href="https://qr-gen-pro.netlify.app" class="link-button"><i class="fas fa-external-link-alt"></i> QR Generator</a>
       </div>
