Add navbar menu to index.html

--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
     <div class="navbar-container">
       <a href="index.html" class="navbar-logo">dityya ganteng😏🤭</a>
       </div>
+    <div class="navbar-menu" id="navbarMenu">
       <div class="navbar-controls">
         <button id="themeToggle" class="navbar-icon" aria-label="Toggle theme">
           <i class="fas fa-moon"></i>
