Update Twitter title and add new music track

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:type" content="website" />
   <!-- Twitter card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Dityya | VarShade" />
+  <meta name="twitter:title" content="Dityya | Info" />
   <meta name="twitter:description" content="Hi, I'm Dityya. Check out my social links, tools, and WhatsApp connections." />
   <meta name="twitter:image" content="https://via.placeholder.com/1200x630/000a1a/00D4AA?text=dityya ganteng😏🤭" />
   <!-- Font & Icon -->
@@ -596,6 +596,7 @@
       { title: 'Show Me Love', src: 'https://files.catbox.moe/nlja0w.mp3' },
       { title: 'Billie ellish', src: 'https://files.catbox.moe/x20fcu.mp3' },
       { title: 'Pamungkas Monolog', src: 'https://files.catbox.moe/nm1td2.mp3' },
+      { title: 'Young and beautiful' , src: 'https://n.uguu.se/gdwWUmAO.mp3' },
       { title: 'Aku Kamu Dan Samudra', src: 'https://files.catbox.moe/61pxj2.mp3' }
     ];
 
